Manifests/06_networking/ebpf_bgp_ve_clustermesh_manifest_2.yaml
# billing-db-service isimli Service nesnesi tanımlama dosyası
apiVersion: v1
kind: Service
metadata:
  name: billing-db-service
  namespace: production
  annotations:
    # Bu anotasyon servisi tüm bağlı kümelere duyurur ve trafiği paylaştırır
    io.cilium/global-service: "true"
    # İsteğe bağlı: Trafiği önce yerel podlara gönder, yoksa diğer kümeye taşır
    io.cilium/shared-service: "true"
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
