Manifests/06_networking/service_mesh_istio_manifest_1.yaml
# billing-virtual-service isimli VirtualService nesnesi tanımlama dosyası
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: billing-virtual-service
  namespace: production
spec:
  hosts:
    - "billing.company.com"
  gateways:
    - my-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: billing-api-service
            port:
              number: 80
