Manifests/06_networking/ag_politikalari_manifest_2.yaml
# allow-frontend-to-api isimli NetworkPolicy nesnesi tanımlama dosyası
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-api
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: billing-api # Hedef pod
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend # İzin verilen kaynak pod
      ports:
        - protocol: TCP
          port: 8080
